<resources>
    <string name="app_name">InventoryApp</string>
    <string name="sell">Sell</string>
    <string name="add_a_item">Add new item</string>
    <string name="hint_email">supplier@gmail.com</string>
    <string name="supplier_email">Supplier E-mail</string>
    <string name="hint_phone">example: +33 1234567899</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="hint_supplier_name">supplier name/surname </string>
    <string name="supplier_name">Supplier Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="product_name">Product Name</string>
    <string name="currency_details">$ / item</string>
    <string name="save">Save item</string>
    <string name="activity_new_item">Add new item</string>
    <string name="activity_edit_item">Edit item</string>
    <string name="order_item">Order more</string>
    <string name="delete_item">Delete item</string>
    <string name="delete_items">Delete all items</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="order_message">Order this item with email or with the phone number provided</string>
    <string name="delete_message">Are you sure you want to proceed with the deletion?</string>
    <string name="delete">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="list_hint">Add some items to your inventory</string>
    <string name="add_fake_data">Add Fake Data</string>
    <string name="select_image">Select image</string>
    <string name="image">Image</string>
    <string name="unsaved_changes">There are unsaved changes in the product information.Are you sure you want to continue?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="dollar">$</string>
</resources>
