<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F4F4F"
    tools:context="com.example.hell.inventoryapp.Details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/supplier_name"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name" />

        <EditText
            android:id="@+id/edit_supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_supplier_name"
            android:inputType="text" />

        <TextView
            android:id="@+id/supplier_phone"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone" />

        <EditText
            android:id="@+id/edit_supplier_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:maxLength="13"/>

        <TextView
            android:id="@+id/supplier_email"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_email" />

        <EditText
            android:id="@+id/edit_supplier_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/product_name"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/edit_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/price_edit" />

        <TextView
            android:id="@+id/price_title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <EditText
            android:id="@+id/price_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="4" />

        <TextView
            android:id="@+id/pricee_edit"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:maxLength="3"
            android:text="@string/dollar" />

        <TextView
            android:id="@+id/quantity_title"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <ImageButton
                android:id="@+id/decrease_quantity"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/minus" />

            <EditText
                android:id="@+id/quantity_edit"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="3"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3" />

            <ImageButton
                android:id="@+id/increase_quantity"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/plus" />

        </LinearLayout>


        <TextView
            android:id="@+id/image_title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image" />



        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
        <Button
            android:id="@+id/select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image" />

    </LinearLayout>

</ScrollView>